# pokedex-Flask

./: .gitignore  README.md  app.py  assets.py  info.json  messages.pot  pyproject.toml
api/: api.py  pokemon.py
static/css/: pokemon.css  style.css
static/js/: pokemon.js  script.js
static/scss/: _main.scss  _pokemon.scss  style.scss
templates/: header.jinja  index.jinja  layout.jinja  pokemon.jinja
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/fr/LC_MESSAGES/: messages.mo  messages.po
