[tool.poetry]
name = "pokedex"
version = "0.1.0"
description = ""
authors = ["Nicolas <nicolas.herissard@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.0.3"
requests = "^2.32.3"
flask-assets = "^2.1.0"
flask-babel = "^4.0.0"
flask-marshmallow = "^1.2.1"
flask-caching = "^2.3.0"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
